--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Inicios CSS</title>
     <link rel="stylesheet" href="./style.css">
 
+    <style>
+        .body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 24px;
+
+        }
+
+    </style>
+
 
 </head>
 
@@ -219,6 +228,12 @@
 
         </ol>
         <a href="./position.html">Ejemplos position</a>
+    </section>
+
+    <section>
+        <h2>
+                <a href="./card.html">Practica de CSS</a>
+        </h2>
     </section>
 </body>
 
